--- a/arch/arm/configs/igep0030_defconfig
+++ b/arch/arm/configs/igep0030_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.35.4
-# Mon Sep  6 11:54:14 2010
+# Linux kernel version: 2.6.35.7
+# Wed Sep 29 13:40:10 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -581,9 +581,9 @@ CONFIG_CAN=m
 #
 # CAN Device Drivers
 #
-# CONFIG_CAN_VCAN is not set
+CONFIG_CAN_VCAN=m
 CONFIG_CAN_DEV=m
-# CONFIG_CAN_CALC_BITTIMING is not set
+CONFIG_CAN_CALC_BITTIMING=y
 # CONFIG_CAN_TI_HECC is not set
 CONFIG_CAN_MCP251X=m
 # CONFIG_CAN_SJA1000 is not set
@@ -1380,9 +1380,9 @@ CONFIG_TWL4030_CODEC=y
 # CONFIG_AB8500_CORE is not set
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
-# CONFIG_REGULATOR_DUMMY is not set
-# CONFIG_REGULATOR_FIXED_VOLTAGE is not set
-# CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
+CONFIG_REGULATOR_DUMMY=y
+CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_VIRTUAL_CONSUMER=y
 # CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
 # CONFIG_REGULATOR_BQ24022 is not set
 # CONFIG_REGULATOR_MAX1586 is not set
@@ -1638,9 +1638,7 @@ CONFIG_PANEL_GENERIC=y
 # CONFIG_PANEL_TAAL is not set
 # CONFIG_PANEL_TOPPOLY_TDO35S is not set
 # CONFIG_PANEL_TPO_TD043MTEA1 is not set
-CONFIG_PANEL_SEIKO_70WVW1TZ0=y
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
-CONFIG_BACKLIGHT_CLASS_DEVICE=y
 
 #
 # Display device support
@@ -1763,7 +1761,6 @@ CONFIG_PANTHERLORD_FF=y
 CONFIG_HID_PETALYNX=m
 CONFIG_HID_PICOLCD=m
 CONFIG_HID_PICOLCD_FB=y
-# CONFIG_HID_PICOLCD_BACKLIGHT is not set
 # CONFIG_HID_PICOLCD_LEDS is not set
 # CONFIG_HID_QUANTA is not set
 CONFIG_HID_ROCCAT=m
