ARM: igep00x0_defconfig: Add TWL4030 MADC support for IGEP boards
The TWL4030 realizes analog-to-digital conversion of different signals and the
MADC driver is used to monitor these realtime signals. This patch adds support
for TWL4030 MADC on IGEP boards.

Signed-off-by: Javier Martinez Canillas <javier@dowhile0.org>

--- a/arch/arm/configs/igep00x0_defconfig
+++ b/arch/arm/configs/igep00x0_defconfig
@@ -1333,6 +1333,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_TPS65010 is not set
 # CONFIG_TPS6507X is not set
 CONFIG_TWL4030_CORE=y
+CONFIG_TWL4030_MADC=y
 CONFIG_TWL4030_POWER=y
 CONFIG_TWL4030_CODEC=y
 # CONFIG_TWL6030_PWM is not set
