--- a/arch/arm/configs/igep00x0_defconfig
+++ b/arch/arm/configs/igep00x0_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/arm 2.6.37 Kernel Configuration
-# Tue Sep 27 09:38:19 2011
+# Mon Jan 16 18:42:51 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -260,7 +260,6 @@ CONFIG_OMAP_MBOX_FWK=y
 CONFIG_OMAP_MBOX_KFIFO_SIZE=256
 CONFIG_OMAP_IOMMU=y
 # CONFIG_OMAP_IOMMU_DEBUG is not set
-CONFIG_OMAP_IOMMU_IVA2=y
 # CONFIG_OMAP_MPU_TIMER is not set
 CONFIG_OMAP_32K_TIMER=y
 # CONFIG_OMAP3_L2_AUX_SECURE_SAVE_RESTORE is not set
@@ -1106,6 +1105,7 @@ CONFIG_HW_RANDOM=y
 # CONFIG_R3964 is not set
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
+# CONFIG_TI81XX_HDMI is not set
 # CONFIG_RAMOOPS is not set
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
@@ -1217,7 +1217,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_CHARGER_ISP1704 is not set
-# CONFIG_CHARGER_TWL4030 is not set
+CONFIG_CHARGER_TWL4030=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -1333,9 +1333,10 @@ CONFIG_MFD_CORE=y
 # CONFIG_TPS65010 is not set
 # CONFIG_TPS6507X is not set
 CONFIG_TWL4030_CORE=y
-CONFIG_TWL4030_MADC=y
 CONFIG_TWL4030_POWER=y
+CONFIG_TWL4030_SCRIPT=y
 CONFIG_TWL4030_CODEC=y
+CONFIG_TWL4030_MADC=y
 # CONFIG_TWL6030_PWM is not set
 # CONFIG_MFD_STMPE is not set
 # CONFIG_MFD_TC35892 is not set
@@ -1410,7 +1411,6 @@ CONFIG_MEDIA_TUNER_MC44S803=m
 CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEO_V4L1=y
 CONFIG_VIDEOBUF_GEN=y
-CONFIG_VIDEOBUF_DMA_SG=y
 CONFIG_VIDEOBUF_VMALLOC=m
 CONFIG_VIDEOBUF_DMA_CONTIG=y
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
@@ -1760,12 +1760,12 @@ CONFIG_FB_OMAP2_NUM_FBS=3
 CONFIG_PANEL_GENERIC=y
 # CONFIG_PANEL_SHARP_LS037V7DW01 is not set
 # CONFIG_PANEL_SHARP_LQ043T1DG01 is not set
+# CONFIG_PANEL_TAAL is not set
 # CONFIG_PANEL_TOPPOLY_TDO35S is not set
 # CONFIG_PANEL_TPO_TD043MTEA1 is not set
+# CONFIG_PANEL_ACX565AKM is not set
 CONFIG_PANEL_POWERTIP_PH480272T=y
 CONFIG_PANEL_SEIKO_70WVW1TZ3=y
-# CONFIG_TI81XX_HDMI is not set
-# CONFIG_SII9022a is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
@@ -2206,9 +2206,6 @@ CONFIG_UIO=y
 CONFIG_UIO_PDRV=m
 CONFIG_UIO_PDRV_GENIRQ=m
 # CONFIG_STAGING is not set
-CONFIG_Sys_Link=y
-CONFIG_SYSLINK_MULTIPROC=y
-CONFIG_SYSLINK_NOTIFY=y
 
 #
 # File systems
